1.2.2 - ??
--------------
make_resourceful is now available as a gem instead of a plugin, so use it that way (also include backports gem for older rubies)
paperclip is now used in preference to attachment_fu
start some experimentation with caching
fix bugs around saved works

1.2.1 - February 28, 2012
--------------
Remove ruby-net-ldap gem in favor of net-ldap
Update aasm gem
Update Solr to 3.5
Use rails-18n gem to get "Rails" translations
Use sword2ruby to handle sword interaction (note that we still only support
Sword 1 servers, though the basic machinery is in place for Sword 2).
Change autocompletion to jQueryUI from plugin
Remove legacy prototype javascript in favor of jQuery, including removal of prototype_legacy_helper plugin
Remove dead code for merging works
Update delayed_job to 3.0 - requires migration
Allow rdf request to works#index to supply rows parameter
Use Rails.env in place of ENV['RAILS_ENV'] which was causing at least one bug
Bug fixes
Change a bit about how delayed_job is started. Can now run in different environments simultaneously and has env info in process name
Use _html suffix in I18n keys to denote html strings (which are automatically html safe)
Use loofah/loofah-activerecord to sanitize some fields directly in database, allowing html to be used in views as appropriate.
Add simple support for removing stopwords from consideration for sorting/bucketing of certain titles/names.

1.2.0 - December 7, 2011
--------------
Bumped Rails version up to 3.0.10, updated gems accordingly.
Fix a problem with assigning/deleting roles through the GUI.
Make assignment/deletion of roles for explicit roles - don't consider (but do note) cascading for this.
Only show header for external credential login when such a method is actually used.
Fix bug after will_paginate 3.0.0 upgrade
Prevent a possible infinite loop after saving a contributorship from even being possible