@@ -1,3 +1,0 @@
-class PublisherSource < ActiveRecord::Base
-  has_many :publishers
-end
