@@ -1,3 +1,3 @@
 = render 'shared/pub_common/authority_form', :authorities => authorities,
   :submit_url => update_multiple_publishers_path, :page => page,
-  :headers => [t('app.title'), t('app.source'), Publication.model_name.human_pl]
+  :headers => [t('app.title'), Publication.model_name.human_pl]
