@@ -2,6 +2,5 @@
   = hidden_field_tag "pub_ids[]", authority_form_item.id
   %td= radio_button_tag "auth_id", authority_form_item.id
   %td= link_to name_or_unknown(authority_form_item.authority.name), edit_publisher_path(authority_form_item)
-  %td= name_or_unknown(authority_form_item.publisher_source.name) if authority_form_item.publisher_source
   %td= authority_form_item.publications.length
   %td= link_to t('app.remove'), remove_from_box_publishers_url(:rem_pa => authority_form_item.id, :page => page)
