@@ -4,6 +4,7 @@ make_resourceful is now available as a gem instead of a plugin, so use it that w
 paperclip is now used in preference to attachment_fu
 start some experimentation with caching
 fix bugs around saved works
+Remove PublisherSource class and related. It did nothing. Retain publisher_source_id in Publisher (at least for now).
 
 1.2.1 - February 28, 2012
 --------------
